# VisionVault

./: .gitignore
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f65c3143a01_create_image_table.py  68dc362e728f_added_size_to_image_model.py  ae26762d87c5_create_user_table.py
backend/app/: main.py
backend/app/auth/: api.py  backend.py  manager.py  models.py
backend/app/core/: celery_app.py  config.py  database.py
backend/app/embeddings/: clip.py  qdrant_client.py
backend/app/images/: api.py  exceptions.py  models.py  repository.py  schemas.py  service.py
backend/app/processing/: tasks.py
backend/app/search/: api.py  schemas.py  service.py
backend/app/shared/: storage.py
backend/tests/: conftest.py  test_auth.py  test_images.py  test_search.py
docker/: docker-compose.yml
docs/: PHASE_1_PLAN.md  VisionVault Project Specification.md
frontend/: .prettierignore  eslint.config.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: auth.ts  client.ts  images.ts  search.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/pages/: DashboardPage.vue  GalleryPage.vue  LoginPage.vue  RegisterPage.vue  SearchPage.vue  UploadPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: auth.ts  image.ts  search.ts
frontend/tests/api/: client.test.ts
frontend/tests/pages/: LoginPage.test.ts  RegisterPage.test.ts
frontend/tests/router/: guard.test.ts
scripts/: dev.ps1
(+1 files in other folders)
